crates/solidity-v2/testing/snapshots/diagnostics_output/structure/library_non_constant_state_variable/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9957] Error: Library cannot have non-constant state variables
   ╭─[input.sol:6:5]
   │
 6 │     uint x;
   │     ───┬──  
   │        ╰──── Error occurred here.
───╯
